<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_gravity="center_horizontal"
    android:layout_width="280dp"
    android:layout_height="467dp"
    app:cardElevation="20dp"
    app:cardCornerRadius="@dimen/cardCornerRadius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardSignBackground">

        <EditText
            android:id="@+id/email"
            style="@style/EmailPasswordText"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:hint="@string/email_address"/>

        <CheckBox
            android:id="@+id/keep_me_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_below="@+id/password"
            android:layout_alignStart="@+id/password"
            android:text="@string/keep_me_sign_in"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/sign_in"
            style="@style/SignInButton"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_alignStart="@id/keep_me_check"
            android:layout_below="@id/keep_me_check"
            android:layout_marginTop="58dp"
            android:text="@string/sign_in"
            android:enabled="false"/>

        <Button
            android:id="@+id/sign_up"
            style="@style/SignUpButton"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_alignStart="@id/sign_in"
            android:layout_below="@id/sign_in"
            android:layout_marginTop="11dp"
            android:text="@string/sign_up"/>

        <TextView
            android:id="@+id/forgot_password"
            style="@style/ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/forgot_password"/>

        <EditText
            android:id="@+id/password"
            style="@style/EmailPasswordText"
            android:layout_width="216dp"
            android:layout_height="48dp"
            android:layout_marginTop="33dp"
            android:hint="@string/password"
            android:layout_below="@+id/email"
            android:layout_alignStart="@+id/email"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>