<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">


    <TextView
        android:id="@+id/select_members_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/select_members"
        android:textColor="@color/chats_item_last_message_author">

    </TextView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/friends_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/select_members_tv"
        android:layout_above="@+id/send"
        android:layout_marginBottom="12dp">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/send"
        android:layout_width="@dimen/sing_up_element_width"
        android:layout_height="@dimen/sing_up_element_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/cardSignBackground"
        android:onClick="onClick"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/sorry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sorry"
        android:visibility="gone" />
</RelativeLayout>