<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">
    <LinearLayout
        android:id="@+id/edit_chat_name_container"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_chat_name_layout"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_chat_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chat_name"/>
        </android.support.design.widget.TextInputLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_chat_image"
            android:background="@drawable/invite_users_icon"
            android:layout_gravity="bottom"
            android:layout_width="@dimen/image_size_main"
            android:layout_height="@dimen/image_size_main" />
    </LinearLayout>
    <TextView
        android:id="@+id/edit_chat_members_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_chat_name_container"
        android:paddingStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/new_chat_members_title"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/edit_chat_members_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/edit_chat_members_title"/>
    <Button
        android:id="@+id/edit_chat_button_create"
        style="@style/NewChatButtonCreate"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_below="@id/edit_chat_members_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/edit_chat_save_button"/>
</RelativeLayout>